media/error_tc/error_255.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_CRyS0ZV.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_CRyS0ZV.cpp:8:1: error: expected ';' before '}' token
 }
 ^
